<resources>
    <string name="app_name">DeliveryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_search_hint">Что желаете заказать?</string>
    <string name="whats_new">Новинки</string>
    <string name="specials">Акции</string>
    <string name="popularNow">Популярное</string>
    <string name="bottom_menu_icon">Меню</string>
    <string name="bottom_search_icon">Поиск</string>
    <string name="bottom_cart_icon">Корзина</string>
    <string name="bottom_orders_icon">Заказы</string>
    <string name="bottom_profile_icon">Профиль</string>
    <string name="search_hint">Поиск</string>
    <string name="checkout">Оформить заказ</string>
    <string name="total">Всего:</string>
    <string name="cart">Моя Корзина</string>
    <string name="empty_cart">Ваша корзина пуста</string>
    <string name="food">Блюдо</string>
    <string name="quantity">Количество:</string>
    <string name="_1">1</string>
    <string name="all_orders">История заказов</string>
    <string name="id">ID Заказа</string>
    <string name="no_orders">Нет заказов</string>
    <string name="go_to_cart">В корзину</string>
    <string name="address">Адрес</string>
    <string name="full_name">Полное имя</string>
    <string name="phone">Телефон</string>
    <string name="go_home">На главную</string>
    <string name="congrats">Поздравляем!\nВаш заказ принят</string>
    <string name="billing">Оформление</string>
    <string name="payment_methods">Способ оплаты</string>
    <string name="shipping_address">Адрес доставки</string>
    <string name="payment_online">Приложение не поддерживает онлайн оплату. Вы можете оплатить заказ при получении</string>
    <string name="add_address"><![CDATA[Добавить адрес ->]]></string>
    <string name="app">Приложение</string>
    <string name="delivery_app">Delivery App</string>
    <string name="developed_by_vladiyak">Developed by VladiYak</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="are_you_sure_delete">Вы уверены что хотите удалить эту позицию из корзины?</string>
    <string name="confirmation">Подтверждение</string>
    <string name="location">Расположение</string>
    <string name="area">Район</string>
    <string name="city">Город</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="help">Помощь</string>
    <string name="login">Войти</string>
    <string name="forgotten_password">Забыли пароль?</string>
    <string name="sign_in">Вход</string>
    <string name="don_t_have_an_account">Нет аккаунта?</string>
    <string name="sign_up"> Зарегистрироваться</string>
    <string name="user_name">Имя</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="about">Приложение</string>
    <string name="app_information">Информация о приложении</string>
    <string name="need_help">Нужна помощь?</string>
    <string name="faqs">FAQs</string>
    <string name="share">Поделиться</string>
    <string name="app_link_share">Ссылка</string>
    <string name="logout">Выйти</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="sign_up1">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="have_an_account">Есть аккаунт?</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="forgot_change_password">Забыли/Изменить пароль?</string>
    <string name="are_you_sure_you_want_to_logout">Вы уверены что хотите выйти?</string>
    <string name="see_more">Перейти</string>
    <string name="resetpassword">Сброс пароля</string>
    <string name="we_will_send_you_the_password_link_to_your_email">Мы отправим ссылку на пароль на ваш email</string>
    <string name="send">Отправить</string>
    <string name="product_information">Информация о продукте:</string>
    <string name="category">Категория</string>
    <string name="description">Описание</string>
    <string name="price">Цена</string>
    <string name="offer_percentage">Процент предложения</string>
    <string name="images">Изображения</string>
    <string name="menu">Меню</string>
    <string name="add_products">Добавить позиции в меню</string>
</resources>