<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuFragment"
        android:title="@string/bottom_menu_icon"
        android:icon="@drawable/menupizza"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/bottom_search_icon"
        android:icon="@drawable/ic_search"/>
    <item
        android:id="@+id/cartFragment"
        android:title="@string/bottom_cart_icon"
        android:icon="@drawable/ic_bag"/>
    <item
        android:id="@+id/orderHistoryFragment"
        android:title="@string/bottom_orders_icon"
        android:icon="@drawable/speicals"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/bottom_profile_icon"
        android:icon="@drawable/ic_profile"/>

</menu>