<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddressFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddresses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageAddressClose"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvShippingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/shipping_address"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageAddressClose"
                app:layout_constraintStart_toEndOf="@id/imageAddressClose"
                app:layout_constraintTop_toTopOf="@+id/imageAddressClose" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAddress"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toTopOf="@+id/topLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddresses"
        app:lottie_rawRes="@raw/address" />

    <View
        android:id="@+id/topLine"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:background="@drawable/white_background"
        android:backgroundTint="@color/g_blue_gray200"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddresses" />

    <EditText
        android:id="@+id/edAddressTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/location"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:singleLine="true"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/topLine"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edFullName"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/full_name"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:singleLine="true"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/edAddressTitle"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edArea"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/area"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:singleLine="true"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/edFullName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/phone"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:singleLine="true"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/edArea"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/edPhone">

        <EditText
            android:id="@+id/edCity"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="start|center_vertical"
            android:hint="@string/city"
            android:paddingStart="@dimen/_18sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDelelte"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/red_button"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/red_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbarAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:indeterminateTint="@color/gray"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>