<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/topLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageCartProduct"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:src="@drawable/speicals"
            app:layout_constraintBottom_toTopOf="@+id/topLine"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvProductCartName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:lines="1"
            android:text="@string/food"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imageCartProduct"
            app:layout_constraintTop_toTopOf="@id/imageCartProduct" />

        <TextView
            android:id="@+id/tvProductCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="$50"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvProductCartName"
            app:layout_constraintTop_toBottomOf="@id/tvProductCartName" />

        <TextView
            android:id="@+id/tvBillingQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintStart_toStartOf="@id/tvProductCartPrice"
            app:layout_constraintTop_toBottomOf="@id/tvProductCartPrice" />

        <TextView
            android:id="@+id/tvBillingProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/_1"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvBillingQuantity"
            app:layout_constraintStart_toEndOf="@id/tvBillingQuantity"
            app:layout_constraintTop_toTopOf="@+id/tvBillingQuantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>